@@ -1,15 +1,17 @@
 package sports.center.com.service.impl;
 
-import jakarta.validation.ConstraintViolation;
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Validator;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.jpa.repository.JpaRepository;
+import org.slf4j.MDC;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import sports.center.com.dto.trainer.TrainerResponseDto;
 import sports.center.com.dto.training.TrainingRequestDto;
 import sports.center.com.dto.training.TrainingResponseDto;
+import sports.center.com.dto.training.TrainingTypeResponseDto;
+import sports.center.com.exception.exceptions.*;
 import sports.center.com.model.Trainee;
 import sports.center.com.model.Trainer;
 import sports.center.com.model.Training;
@@ -18,9 +20,9 @@ import sports.center.com.repository.TraineeRepository;
 import sports.center.com.repository.TrainerRepository;
 import sports.center.com.repository.TrainingRepository;
 import sports.center.com.repository.TrainingTypeRepository;
-import sports.center.com.service.AuthService;
 import sports.center.com.service.TrainingService;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -33,175 +35,275 @@ public class TrainingServiceImpl implements TrainingService {
     private final TraineeRepository traineeRepository;
     private final TrainerRepository trainerRepository;
     private final TrainingTypeRepository trainingTypeRepository;
-    private final AuthService authService;
     private final Validator validator;
+    private final HttpServletRequest request;
 
     @Override
     public TrainingResponseDto addTraining(TrainingRequestDto request) {
-        log.info("Adding new training: Trainee ID={}, Trainer ID={}, TrainingType ID={}",
-                request.getTraineeId(), request.getTrainerId(), request.getTrainingTypeId());
+        if (request == null) {
+            throw new InvalidTrainerRequestException("Training request cannot be null", Set.of());
+        }
+        String transactionId = MDC.get("transactionId");
+        log.info("[Transaction ID: {}] Adding new training: Trainee={}, Trainer={}", transactionId, request.getTraineeUsername(), request.getTrainerUsername());
 
         validateTrainingRequest(request);
 
-        Trainee trainee = getEntityByIdOrThrow(traineeRepository, request.getTraineeId(), "Trainee");
-        Trainer trainer = getEntityByIdOrThrow(trainerRepository, request.getTrainerId(), "Trainer");
-        TrainingType trainingType = getEntityByIdOrThrow(trainingTypeRepository, request.getTrainingTypeId(), "Training Type");
+        Trainee trainee = findTraineeByUsername(request.getTraineeUsername());
+        Trainer trainer = findTrainerByUsername(request.getTrainerUsername());
 
-        assignTrainer(trainee, trainer);
+        assignTrainerIfNotAssigned(trainee, trainer);
 
-        Training training = createTraining(trainee, trainer, trainingType, request);
-        trainingRepository.save(training);
+        TrainingType trainingType = findTrainingTypeByName(request.getTrainingTypeName());
 
-        log.info("Training created successfully: {}", training.getTrainingName());
-        return mapToResponse(training);
-    }
-
-    private <T> T getEntityByIdOrThrow(JpaRepository<T, Long> repository, Long id, String entityName) {
-        return repository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException(entityName + " not found with ID: " + id));
-    }
-
-    private void assignTrainer(Trainee trainee, Trainer trainer) {
-        if (!trainee.getTrainers().contains(trainer)) {
-            trainee.getTrainers().add(trainer);
-            traineeRepository.save(trainee);
-            log.info("Trainer {} assigned to trainee {}", trainer.getUsername(), trainee.getUsername());
-        }
-    }
-
-    private Training createTraining(Trainee trainee, Trainer trainer, TrainingType trainingType, TrainingRequestDto request) {
         Training training = new Training();
         training.setTrainee(trainee);
         training.setTrainer(trainer);
-        training.setTrainingType(trainingType);
         training.setTrainingName(request.getTrainingName());
         training.setTrainingDate(request.getTrainingDate());
         training.setTrainingDuration(request.getTrainingDuration());
-        return training;
+        training.setTrainingType(trainingType);
+
+        trainingRepository.save(training);
+
+        log.info("[Transaction ID: {}] Training '{}' added successfully for trainee {}", transactionId, request.getTrainingName(), request.getTraineeUsername());
+
+        return TrainingResponseDto.builder()
+                .traineeUsername(trainee.getUsername())
+                .trainerUsername(trainer.getUsername())
+                .trainingName(training.getTrainingName())
+                .trainingDate(training.getTrainingDate())
+                .trainingDuration(training.getTrainingDuration())
+                .trainingTypeName(training.getTrainingType().getTrainingTypeName())
+                .build();
+    }
+
+    private Trainee findTraineeByUsername(String username) {
+        return traineeRepository.findByUsername(username)
+                .orElseThrow(() -> new TraineeNotFoundException("Trainee not found: " + username));
+    }
+
+    private Trainer findTrainerByUsername(String username) {
+        return trainerRepository.findByUsername(username)
+                .orElseThrow(() -> new TrainerNotFoundException("Trainer not found: " + username));
+    }
+
+    private TrainingType findTrainingTypeByName(String trainingTypeName) {
+        return trainingTypeRepository.findByTrainingTypeName(trainingTypeName)
+                .orElseThrow(() -> new TrainingTypeNotFoundException("Training type not found: " + trainingTypeName));
+    }
+
+    private void assignTrainerIfNotAssigned(Trainee trainee, Trainer trainer) {
+        String transactionId = MDC.get("transactionId");
+        if (trainee.getTrainers() == null) {
+            trainee.setTrainers(new ArrayList<>());
+        }
+        if (!trainee.getTrainers().contains(trainer)) {
+            trainee.getTrainers().add(trainer);
+            traineeRepository.save(trainee);
+            log.info("[Transaction ID: {}] Trainer {} assigned to trainee {}", transactionId, trainer.getUsername(), trainee.getUsername());
+        }
     }
 
     @Override
-    public List<TrainingResponseDto> getTraineeTrainings(String traineeUsername, String password, Date fromDate, Date toDate, String trainerName, String trainingType) {
-        authenticateTraineeOrThrow(traineeUsername, password);
-        log.info("Fetching trainings for Trainee: {} from {} to {}, Trainer: {}, TrainingType: {}",
-                traineeUsername, fromDate, toDate, trainerName, trainingType);
+    public List<TrainerResponseDto> getNotAssignedActiveTrainers() {
+        String username = getAuthenticatedUsername();
+        String transactionId = MDC.get("transactionId");
+        log.info("[Transaction ID: {}] Fetching not assigned active trainers for trainee: {}", transactionId, username);
+        List<Trainer> trainers = Optional.ofNullable(trainerRepository.findNotAssignedActiveTrainers(username))
+                .orElse(Collections.emptyList());
 
-        List<Training> trainings = trainingRepository.findTrainingsByTraineeCriteria(traineeUsername, fromDate, toDate, trainerName, trainingType);
-        return trainings.stream().map(this::mapToResponse).collect(Collectors.toList());
+        log.debug("[Transaction ID: {}] Found {} not assigned active trainers", transactionId, trainers.size());
+        return trainers.stream()
+                .map(trainer -> TrainerResponseDto.builder()
+                        .username(trainer.getUsername())
+                        .firstName(trainer.getFirstName())
+                        .lastName(trainer.getLastName())
+                        .specializationName(trainer.getSpecialization().getTrainingTypeName())
+                        .build())
+                .toList();
     }
 
     @Override
-    public List<TrainingResponseDto> getTrainerTrainings(String trainerUsername, String password, Date fromDate, Date toDate, String traineeName) {
-        authenticateTrainerOrThrow(trainerUsername, password);
-        log.info("Fetching trainings for Trainer: {} from {} to {}, Trainee: {}",
-                trainerUsername, fromDate, toDate, traineeName);
+    public List<TrainingTypeResponseDto> getTrainingType() {
+        List<TrainingType> trainingTypes = trainingTypeRepository.findAll();
 
-        List<Training> trainings = trainingRepository.findTrainingsByTrainerCriteria(trainerUsername, fromDate, toDate, traineeName);
-        return trainings.stream().map(this::mapToResponse).collect(Collectors.toList());
-    }
-
-    @Override
-    public List<TrainerResponseDto> getUnassignedTrainers(String traineeUsername, String password) {
-        authenticateTraineeOrThrow(traineeUsername, password);
-        log.info("Fetching unassigned trainers for Trainee: {}", traineeUsername);
-
-        List<Trainer> unassignedTrainers = trainerRepository.findUnassignedTrainers(traineeUsername);
-
-        log.info("Unassigned trainers: {}", unassignedTrainers.stream()
-                .map(Trainer::getUsername)
-                .collect(Collectors.joining(", ")));
-
-        return unassignedTrainers.stream()
-                .map(trainer -> new TrainerResponseDto(
-                        trainer.getFirstName(),
-                        trainer.getLastName(),
-                        trainer.getUsername(),
-                        null,
-                        trainer.getIsActive(),
-                        trainer.getSpecialization().getId()))
+        return trainingTypes.stream()
+                .map(this::mapToResponseTrainingType)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<TrainerResponseDto> updateTraineeTrainers(String traineeUsername, String password, List<String> trainerUsernames) {
-        authenticateTraineeOrThrow(traineeUsername, password);
-        log.info("Updating trainers for Trainee: {}", traineeUsername);
+    public List<TrainerResponseDto> updateTraineeTrainersList(List<String> trainerUsernames) {
+        String transactionId = MDC.get("transactionId");
+        String username = getAuthenticatedUsername();
+        log.info("[Transaction ID: {}] Update trainers list for trainee: {}", transactionId, username);
 
-        Trainee trainee = getTraineeOrThrow(traineeUsername);
+
+        Trainee trainee = getTraineeOrThrow(username);
         List<Trainer> validTrainers = getValidTrainersOrThrow(trainerUsernames);
 
+        log.debug("[Transaction ID: {}] Valid trainers found: {}", transactionId, validTrainers.size());
         updateTraineeTrainerList(trainee, validTrainers);
 
+        log.info("[Transaction ID: {}] Trainee {}'s trainer list updated successfully", transactionId, username);
         return mapTrainersToResponse(trainee.getTrainers());
+    }
+
+    @Override
+    public List<TrainingResponseDto> getTraineeTrainings(Date fromDate, Date toDate, String trainerName, String trainingType) {
+        String transactionId = MDC.get("transactionId");
+        String traineeUsername = getAuthenticatedUsername();
+        log.info("[Transaction ID: {}] Fetching trainings for Trainee: {} from {} to {}, Trainer: {}, TrainingType: {}", transactionId, traineeUsername, fromDate, toDate, trainerName, trainingType);
+
+        List<Training> trainings = trainingRepository.findTrainingsByTraineeCriteria(
+                traineeUsername, fromDate, toDate, trainerName, trainingType);
+
+        log.debug("[Transaction ID: {}] Found {} trainings for Trainee: {}", transactionId, trainings.size(), traineeUsername);
+        return trainings.stream().map(this::mapToResponseTrainee).collect(Collectors.toList());
+    }
+
+    @Override
+    public List<TrainingResponseDto> getTrainerTrainings(Date fromDate, Date toDate, String traineeName) {
+        String transactionId = MDC.get("transactionId");
+        String trainerUsername = getAuthenticatedUsername();
+        log.info("[Transaction ID: {}] Fetching trainings for Trainer: {} from {} to {}, Trainee: {}", transactionId, trainerUsername, fromDate, toDate, traineeName);
+
+        List<Training> trainings = trainingRepository.findTrainingsByTrainerCriteria(
+                trainerUsername, fromDate, toDate, traineeName);
+
+        log.debug("[Transaction ID: {}] Found {} trainings for Trainer: {}", transactionId, trainings.size(), trainerUsername);
+        return trainings.stream().map(this::mapToResponseTrainer).collect(Collectors.toList());
     }
 
     private Trainee getTraineeOrThrow(String username) {
         return traineeRepository.findByUsername(username)
-                .orElseThrow(() -> new IllegalArgumentException("Trainee not found with username: " + username));
+                .orElseThrow(() -> new TraineeNotFoundException("Trainee not found with username: " + username));
     }
 
     private List<Trainer> getValidTrainersOrThrow(List<String> trainerUsernames) {
+        if (trainerUsernames == null || trainerUsernames.isEmpty()) {
+            throw new EmptyTrainerListException("Trainer usernames list cannot be empty!");
+        }
+
         List<Trainer> trainers = trainerRepository.findByUsernameIn(trainerUsernames);
         if (trainers.size() != trainerUsernames.size()) {
-            throw new IllegalArgumentException("Some trainers were not found in the database!");
+            throw new TraineeNotFoundException("Some trainers were not found in the database!");
         }
         return trainers;
     }
 
-    private void updateTraineeTrainerList(Trainee trainee, List<Trainer> newTrainers) {
-        Set<Trainer> updatedTrainers = new HashSet<>(trainee.getTrainers());
-        updatedTrainers.addAll(newTrainers);
-        trainee.setTrainers(new ArrayList<>(updatedTrainers));
+    private void validateTrainingRequest(TrainingRequestDto request) {
+        String transactionId = MDC.get("transactionId");
+        Set<jakarta.validation.ConstraintViolation<TrainingRequestDto>> violations = validator.validate(request);
+        if (!violations.isEmpty()) {
+            String errors = violations.stream()
+                    .map(jakarta.validation.ConstraintViolation::getMessage)
+                    .collect(Collectors.joining(", "));
 
+            log.warn("[Transaction ID: {}] Validation failed: {}", transactionId, errors);
+
+            Set<jakarta.validation.ConstraintViolation<?>> genericViolations = violations.stream()
+                    .map(v -> (jakarta.validation.ConstraintViolation<?>) v)
+                    .collect(Collectors.toSet());
+
+            throw new InvalidTrainingRequestException("Validation failed: " + errors, genericViolations);
+        }
+    }
+
+    private void updateTraineeTrainerList(Trainee trainee, List<Trainer> validTrainers) {
+        String transactionId = MDC.get("transactionId");
+        List<Trainer> uniqueTrainers = new ArrayList<>(new HashSet<>(validTrainers));
+        trainee.setTrainers(uniqueTrainers);
         traineeRepository.save(trainee);
-        log.info("Updated trainers list for Trainee: {}", trainee.getUsername());
+        log.info("[Transaction ID: {}] Updated trainers list for Trainee: {}", transactionId, trainee.getUsername());
+    }
+
+    private String getAuthenticatedUsername() {
+        String transactionId = MDC.get("transactionId");
+        String authHeader = request.getHeader("Authorization");
+
+        if (authHeader == null || !authHeader.startsWith("Basic ")) {
+            log.warn("[Transaction ID: {}] Unauthorized request", transactionId);
+            throw new UnauthorizedException("Unauthorized request");
+        }
+
+        String base64Credentials = authHeader.substring("Basic ".length());
+        String credentials = new String(Base64.getDecoder().decode(base64Credentials), StandardCharsets.UTF_8);
+        String[] values = credentials.split(":", 2);
+
+        if (values.length != 2) {
+            log.warn("[Transaction ID: {}] Invalid authentication format", transactionId);
+            throw new UnauthorizedException("Invalid authentication format");
+        }
+
+        String username = values[0];
+        String password = values[1];
+
+        log.info("[Transaction ID: {}] Attempting authentication for username: {}", transactionId, username);
+
+        Optional<Trainee> traineeOptional = traineeRepository.findByUsername(username);
+        if (traineeOptional.isPresent()) {
+            return validatePasswordAndReturnUsername(traineeOptional.get(), password, username, "trainee");
+        }
+
+        Optional<Trainer> trainerOptional = trainerRepository.findByUsername(username);
+        if (trainerOptional.isPresent()) {
+            return validatePasswordAndReturnUsername(trainerOptional.get(), password, username, "trainer");
+        }
+
+        log.warn("[Transaction ID: {}] Authentication failed: username {} not found", transactionId, username);
+        throw new UnauthorizedException("Invalid username or password");
+    }
+
+    private String validatePasswordAndReturnUsername(Object user, String password, String username, String userType) {
+        String transactionId = MDC.get("transactionId");
+        String userPassword = (user instanceof Trainee) ? ((Trainee) user).getPassword() : ((Trainer) user).getPassword();
+
+        if (userPassword == null || !userPassword.equals(password)) {
+            log.warn("[Transaction ID: {}] Authentication failed: incorrect or missing password for {} {}", transactionId, userType, username);
+            throw new UnauthorizedException("Invalid username or password");
+        }
+
+        log.info("[Transaction ID: {}] Authentication successful for {}: {}", transactionId, userType, username);
+        return username;
     }
 
     private List<TrainerResponseDto> mapTrainersToResponse(List<Trainer> trainers) {
         return trainers.stream()
-                .map(trainer -> new TrainerResponseDto(
-                        trainer.getFirstName(),
-                        trainer.getLastName(),
-                        trainer.getUsername(),
-                        null,
-                        trainer.getIsActive(),
-                        trainer.getSpecialization().getId()))
-                .collect(Collectors.toList());
+                .map(trainer -> TrainerResponseDto.builder()
+                        .firstName(trainer.getFirstName())
+                        .lastName(trainer.getLastName())
+                        .username(trainer.getUsername())
+                        .specializationId(trainer.getSpecialization().getId())
+                        .trainees(List.of())
+                        .build())
+                .toList();
     }
 
-    private void validateTrainingRequest(TrainingRequestDto request) {
-        Set<ConstraintViolation<TrainingRequestDto>> violations = validator.validate(request);
-        if (!violations.isEmpty()) {
-            String errorMessage = violations.stream()
-                    .map(ConstraintViolation::getMessage)
-                    .collect(Collectors.joining(", "));
-            log.warn("Validation failed: {}", errorMessage);
-            throw new IllegalArgumentException("Validation failed: " + errorMessage);
-        }
+    private TrainingTypeResponseDto mapToResponseTrainingType(TrainingType trainingType) {
+        return TrainingTypeResponseDto.builder()
+                .id(trainingType.getId())
+                .trainingTypeName(trainingType.getTrainingTypeName())
+                .build();
     }
 
-    private TrainingResponseDto mapToResponse(Training training) {
-        return new TrainingResponseDto(
-                training.getTrainee().getUsername(),
-                training.getTrainer().getUsername(),
-                training.getTrainingType().getTrainingTypeName(),
-                training.getTrainingName(),
-                training.getTrainingDate(),
-                training.getTrainingDuration()
-        );
+    private TrainingResponseDto mapToResponseTrainee(Training training) {
+        return TrainingResponseDto.builder()
+                .trainingName(training.getTrainingName())
+                .trainingDate(training.getTrainingDate())
+                .trainingDuration(training.getTrainingDuration())
+                .trainingTypeName(training.getTrainingType().getTrainingTypeName())
+                .trainerUsername(training.getTrainer().getUsername())
+                .build();
     }
 
-    private void authenticateTraineeOrThrow(String username, String password) {
-        if (!authService.authenticateTrainee(username, password)) {
-            log.warn("Authentication failed for {}", username);
-            throw new SecurityException("Invalid username or password.");
-        }
-    }
-
-    private void authenticateTrainerOrThrow(String username, String password) {
-        if (!authService.authenticateTrainer(username, password)) {
-            log.warn("Authentication failed for {}", username);
-            throw new SecurityException("Invalid username or password.");
-        }
+    private TrainingResponseDto mapToResponseTrainer(Training training) {
+        return TrainingResponseDto.builder()
+                .trainingName(training.getTrainingName())
+                .trainingDate(training.getTrainingDate())
+                .trainingDuration(training.getTrainingDuration())
+                .trainingTypeName(training.getTrainingType().getTrainingTypeName())
+                .traineeUsername(training.getTrainee().getUsername())
+                .build();
     }
 }
