@@ -1,5 +1,6 @@
 package sports.center.com.util.service_impl;
 
+import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Validator;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -10,6 +11,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import sports.center.com.dto.trainer.TrainerResponseDto;
 import sports.center.com.dto.training.TrainingRequestDto;
 import sports.center.com.dto.training.TrainingResponseDto;
+import sports.center.com.exception.exceptions.*;
 import sports.center.com.model.Trainee;
 import sports.center.com.model.Trainer;
 import sports.center.com.model.Training;
@@ -18,19 +20,18 @@ import sports.center.com.repository.TraineeRepository;
 import sports.center.com.repository.TrainerRepository;
 import sports.center.com.repository.TrainingRepository;
 import sports.center.com.repository.TrainingTypeRepository;
-import sports.center.com.service.AuthService;
 import sports.center.com.service.impl.TrainingServiceImpl;
 
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class TrainingServiceImplTest {
-
-    @InjectMocks
-    private TrainingServiceImpl trainingService;
 
     @Mock
     private TrainingRepository trainingRepository;
@@ -45,166 +46,289 @@ class TrainingServiceImplTest {
     private TrainingTypeRepository trainingTypeRepository;
 
     @Mock
-    private AuthService authService;
-
-    @Mock
     private Validator validator;
 
-    private TrainingRequestDto trainingRequest;
-    private Training training;
+    @Mock
+    private HttpServletRequest request;
+
+    @InjectMocks
+    private TrainingServiceImpl trainingService;
+
     private Trainee trainee;
     private Trainer trainer;
     private TrainingType trainingType;
+    private TrainingRequestDto trainingRequestDto;
 
     @BeforeEach
     void setUp() {
         trainee = new Trainee();
-        trainee.setId(1L);
-        trainee.setUsername("trainee1");
+        trainee.setUsername("trainee123");
+        trainee.setPassword("password123");
         trainee.setTrainers(new ArrayList<>());
 
         trainer = new Trainer();
-        trainer.setId(2L);
-        trainer.setUsername("trainer1");
+        trainer.setUsername("trainer456");
+        trainer.setPassword("password123");
+        trainer.setTrainees(new ArrayList<>());
 
         trainingType = new TrainingType();
-        trainingType.setId(3L);
-        trainingType.setTrainingTypeName("Yoga");
-        trainer.setSpecialization(trainingType);
+        trainingType.setId(1L);
+        trainingType.setTrainingTypeName("Strength");
 
-        trainingRequest = new TrainingRequestDto(
-                1L, 2L, 3L, "Morning Yoga", new Date(), 60
-        );
+        trainingRequestDto = new TrainingRequestDto("trainee123", "trainer456", "Morning Workout", new Date(), 60, "Strength");
+    }
 
-        training = new Training();
+    @Test
+    void addTraining_Success() {
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.of(trainer));
+        when(trainingTypeRepository.findByTrainingTypeName(anyString())).thenReturn(Optional.of(trainingType));
+        when(trainingRepository.save(any(Training.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        TrainingResponseDto response = trainingService.addTraining(trainingRequestDto);
+
+        assertNotNull(response);
+        assertEquals("trainee123", response.getTraineeUsername());
+        assertEquals("trainer456", response.getTrainerUsername());
+        assertEquals("Strength", response.getTrainingTypeName());
+        verify(trainingRepository).save(any(Training.class));
+    }
+
+    @Test
+    void addTraining_TraineeNotFound_ShouldThrowException() {
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.empty());
+        assertThrows(TraineeNotFoundException.class, () -> trainingService.addTraining(trainingRequestDto));
+    }
+
+    @Test
+    void addTraining_TrainerNotFound_ShouldThrowException() {
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.empty());
+        assertThrows(TrainerNotFoundException.class, () -> trainingService.addTraining(trainingRequestDto));
+    }
+
+    @Test
+    void addTraining_TrainingTypeNotFound_ShouldThrowException() {
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.of(trainer));
+        when(trainingTypeRepository.findByTrainingTypeName(anyString())).thenReturn(Optional.empty());
+        assertThrows(TrainingTypeNotFoundException.class, () -> trainingService.addTraining(trainingRequestDto));
+    }
+
+    @Test
+    void getTraineeTrainings_InvalidDateRange_ShouldReturnEmptyList() {
+        Date toDate = new Date();
+        Date fromDate = new Date(toDate.getTime() + 10000);
+
+        String encodedCredentials = Base64.getEncoder().encodeToString("trainee:password123".getBytes(StandardCharsets.UTF_8));
+        when(request.getHeader("Authorization")).thenReturn("Basic " + encodedCredentials);
+
+        Trainee trainee = new Trainee();
+        trainee.setUsername("trainee");
+        trainee.setPassword("password123");
+
+        when(traineeRepository.findByUsername("trainee")).thenReturn(Optional.of(trainee));
+        when(trainingRepository.findTrainingsByTraineeCriteria(any(), any(), any(), any(), any())).thenReturn(Collections.emptyList());
+
+        List<TrainingResponseDto> response = trainingService.getTraineeTrainings(fromDate, toDate, null, null);
+
+        assertNotNull(response);
+        assertTrue(response.isEmpty());
+    }
+
+    @Test
+    void getAuthenticatedUsername_InvalidAuthFormat_ShouldThrowException() {
+        when(request.getHeader("Authorization")).thenReturn("Bearer invalidToken");
+        assertThrows(UnauthorizedException.class, () -> trainingService.getNotAssignedActiveTrainers());
+    }
+
+    @Test
+    void addTraining_NullTrainingRequest_ShouldThrowException() {
+        assertThrows(InvalidTrainerRequestException.class, () -> trainingService.addTraining(null));
+    }
+
+    @Test
+    void addTraining_TraineeHasNoTrainers_ShouldAssignTrainer() {
+        trainee.setTrainers(null);
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.of(trainer));
+        when(trainingTypeRepository.findByTrainingTypeName(anyString())).thenReturn(Optional.of(trainingType));
+        when(trainingRepository.save(any(Training.class))).thenAnswer(invocation -> invocation.getArgument(0));
+
+        TrainingResponseDto response = trainingService.addTraining(trainingRequestDto);
+
+        assertNotNull(response);
+        assertEquals("trainer456", trainee.getTrainers().get(0).getUsername());
+    }
+
+    @Test
+    void getNotAssignedActiveTrainers_EmptyList_ShouldReturnEmptyResponse() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+
+        trainee.setPassword("password123");
+        doReturn(Optional.of(trainee)).when(traineeRepository).findByUsername(anyString());
+
+        doReturn(new ArrayList<>()).when(trainerRepository).findNotAssignedActiveTrainers(anyString());
+
+        List<TrainerResponseDto> trainers = trainingService.getNotAssignedActiveTrainers();
+
+        assertNotNull(trainers);
+        assertTrue(trainers.isEmpty());
+    }
+
+    @Test
+    void getNotAssignedActiveTrainers_NullList_ShouldHandleGracefully() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+
+        trainee.setPassword("password123");
+        doReturn(Optional.of(trainee)).when(traineeRepository).findByUsername(anyString());
+
+        doReturn(Collections.emptyList()).when(trainerRepository).findNotAssignedActiveTrainers(anyString());
+
+        List<TrainerResponseDto> trainers = trainingService.getNotAssignedActiveTrainers();
+
+        assertNotNull(trainers);
+        assertTrue(trainers.isEmpty());
+    }
+
+
+    @Test
+    void getAuthenticatedUsername_NoAuthHeader_ShouldThrowUnauthorizedException() {
+        when(request.getHeader("Authorization")).thenReturn(null);
+        assertThrows(UnauthorizedException.class, () -> trainingService.getNotAssignedActiveTrainers());
+    }
+
+    @Test
+    void getAuthenticatedUsername_TrainerNotFound_ShouldThrowUnauthorizedException() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZToxMjM0");
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.empty());
+
+        assertThrows(UnauthorizedException.class, () -> trainingService.getNotAssignedActiveTrainers());
+    }
+
+    @Test
+    void updateTraineeTrainersList_EmptyTrainerUsernames_ShouldThrowException() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        trainee.setPassword("password123");
+        doReturn(Optional.of(trainee)).when(traineeRepository).findByUsername(anyString());
+        assertThrows(EmptyTrainerListException.class, () -> trainingService.updateTraineeTrainersList(new ArrayList<>()));
+    }
+
+    @Test
+    void updateTraineeTrainersList_SomeTrainersNotFound_ShouldThrowException() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        trainee.setPassword("password123");
+        doReturn(Optional.of(trainee)).when(traineeRepository).findByUsername(anyString());
+
+        when(trainerRepository.findByUsernameIn(any())).thenReturn(List.of(trainer));
+
+        assertThrows(TraineeNotFoundException.class, () -> trainingService.updateTraineeTrainersList(List.of("trainer456", "trainer789")));
+    }
+
+    @Test
+    void getAuthenticatedUsername_TrainerHasNoPassword_ShouldThrowUnauthorizedException() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        trainer.setPassword(null);
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.of(trainer));
+
+        assertThrows(UnauthorizedException.class, () -> trainingService.getNotAssignedActiveTrainers());
+    }
+
+    @Test
+    void updateTraineeTrainersList_WithValidData_ShouldUpdateSuccessfully() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        trainee.setTrainers(new ArrayList<>());
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsernameIn(any())).thenReturn(List.of(trainer));
+        when(traineeRepository.save(any(Trainee.class))).thenReturn(trainee);
+
+        trainer.setSpecialization(new TrainingType());
+        trainer.getSpecialization().setId(1L);
+
+        List<TrainerResponseDto> response = trainingService.updateTraineeTrainersList(List.of("trainer456"));
+        assertNotNull(response);
+        assertEquals(1, response.size());
+        assertEquals("trainer456", response.get(0).getUsername());
+    }
+
+    @Test
+    void getAuthenticatedUsername_InvalidPassword_ShouldThrowUnauthorizedException() {
+        String encodedCredentials = Base64.getEncoder().encodeToString("trainee:wrongPassword".getBytes(StandardCharsets.UTF_8));
+        when(request.getHeader("Authorization")).thenReturn("Basic " + encodedCredentials);
+
+        trainee.setPassword("password123");
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+
+        assertThrows(UnauthorizedException.class, () -> trainingService.getNotAssignedActiveTrainers());
+    }
+
+    @Test
+    void getTraineeTrainings_ValidDateRange_ShouldReturnTrainings() {
+        Date fromDate = new Date();
+        Date toDate = new Date(fromDate.getTime() + 100000);
+
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+
+        Training training = new Training();
+        training.setId(1L);
         training.setTrainee(trainee);
         training.setTrainer(trainer);
         training.setTrainingType(trainingType);
-        training.setTrainingName("Morning Yoga");
-        training.setTrainingDate(new Date());
-        training.setTrainingDuration(60);
+
+        when(trainingRepository.findTrainingsByTraineeCriteria(any(), any(), any(), any(), any()))
+                .thenReturn(List.of(training));
+
+        List<TrainingResponseDto> response = trainingService.getTraineeTrainings(fromDate, toDate, null, null);
+
+        assertNotNull(response);
+        assertFalse(response.isEmpty());
+        assertEquals(1, response.size());
     }
 
     @Test
-    void addTraining() {
-        when(validator.validate(any())).thenReturn(Set.of());
-        when(traineeRepository.findById(1L)).thenReturn(Optional.of(trainee));
-        when(trainerRepository.findById(2L)).thenReturn(Optional.of(trainer));
-        when(trainingTypeRepository.findById(3L)).thenReturn(Optional.of(trainingType));
-        when(trainingRepository.save(any(Training.class))).thenReturn(training);
+    void addTraining_ShouldSaveTraining() {
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
+        when(trainerRepository.findByUsername(anyString())).thenReturn(Optional.of(trainer));
+        when(trainingTypeRepository.findByTrainingTypeName(anyString())).thenReturn(Optional.of(trainingType));
+        when(trainingRepository.save(any(Training.class))).thenAnswer(invocation -> invocation.getArgument(0));
 
-        TrainingResponseDto response = trainingService.addTraining(trainingRequest);
+        TrainingResponseDto response = trainingService.addTraining(trainingRequestDto);
 
         assertNotNull(response);
-        assertEquals("trainee1", response.getTraineeName());
-        assertEquals("trainer1", response.getTrainerName());
-        assertEquals("Yoga", response.getTrainingType());
-        assertEquals("Morning Yoga", response.getTrainingName());
-
         verify(trainingRepository, times(1)).save(any(Training.class));
     }
 
-
     @Test
-    void addTraining_TraineeNotFound() {
-        when(traineeRepository.findById(1L)).thenReturn(Optional.empty());
+    void getNotAssignedActiveTrainers_UserHasAllTrainers_ShouldReturnEmptyList() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            trainingService.addTraining(trainingRequest);
-        });
+        trainee.setPassword("password123");
 
-        assertEquals("Trainee not found with ID: 1", exception.getMessage());
+        Trainer trainer1 = new Trainer();
+        trainer1.setUsername("trainer1");
+
+        Trainer trainer2 = new Trainer();
+        trainer2.setUsername("trainer2");
+
+        List<Trainer> assignedTrainers = List.of(trainer1, trainer2);
+        trainee.setTrainers(assignedTrainers);
+
+        doReturn(Optional.of(trainee)).when(traineeRepository).findByUsername(anyString());
+        doReturn(new ArrayList<>()).when(trainerRepository).findNotAssignedActiveTrainers(anyString());
+
+        List<TrainerResponseDto> trainers = trainingService.getNotAssignedActiveTrainers();
+
+        assertNotNull(trainers);
+        assertTrue(trainers.isEmpty());
     }
 
     @Test
-    void addTraining_TrainerNotFound() {
-        when(traineeRepository.findById(1L)).thenReturn(Optional.of(trainee));
-        when(trainerRepository.findById(2L)).thenReturn(Optional.empty());
+    void updateTraineeTrainersList_NullOrEmptyTrainerList_ShouldThrowException() {
+        when(request.getHeader("Authorization")).thenReturn("Basic dHJhaW5lZTpwYXNzd29yZDEyMw==");
+        when(traineeRepository.findByUsername(anyString())).thenReturn(Optional.of(trainee));
 
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            trainingService.addTraining(trainingRequest);
-        });
-
-        assertEquals("Trainer not found with ID: 2", exception.getMessage());
-    }
-
-    @Test
-    void addTraining_TrainingTypeNotFound() {
-        when(traineeRepository.findById(1L)).thenReturn(Optional.of(trainee));
-        when(trainerRepository.findById(2L)).thenReturn(Optional.of(trainer));
-        when(trainingTypeRepository.findById(3L)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> {
-            trainingService.addTraining(trainingRequest);
-        });
-
-        assertEquals("Training Type not found with ID: 3", exception.getMessage());
-    }
-
-    @Test
-    void getTraineeTrainings() {
-        when(authService.authenticateTrainee("trainee1", "password123")).thenReturn(true);
-        when(trainingRepository.findTrainingsByTraineeCriteria("trainee1", null, null, null, null))
-                .thenReturn(List.of(training));
-
-        List<TrainingResponseDto> response = trainingService.getTraineeTrainings("trainee1", "password123", null, null, null, null);
-
-        assertEquals(1, response.size());
-        assertEquals("Morning Yoga", response.get(0).getTrainingName());
-    }
-
-    @Test
-    void getTraineeTrainings_Fail_InvalidPassword() {
-        when(authService.authenticateTrainee("trainee1", "wrongPassword")).thenReturn(false);
-
-        Exception exception = assertThrows(SecurityException.class, () ->
-                trainingService.getTraineeTrainings("trainee1", "wrongPassword", null, null, null, null));
-
-        assertEquals("Invalid username or password.", exception.getMessage());
-    }
-
-    @Test
-    void getUnassignedTrainers_Success() {
-        when(authService.authenticateTrainee("trainee1", "password123")).thenReturn(true);
-        when(trainerRepository.findUnassignedTrainers("trainee1")).thenReturn(List.of(trainer));
-
-        List<TrainerResponseDto> response = trainingService.getUnassignedTrainers("trainee1", "password123");
-
-        assertEquals(1, response.size());
-        assertEquals("trainer1", response.get(0).getUsername());
-    }
-
-    @Test
-    void getUnassignedTrainers_Fail_InvalidPassword() {
-        when(authService.authenticateTrainee("trainee1", "wrongPassword")).thenReturn(false);
-
-        Exception exception = assertThrows(SecurityException.class, () ->
-                trainingService.getUnassignedTrainers("trainee1", "wrongPassword"));
-
-        assertEquals("Invalid username or password.", exception.getMessage());
-    }
-
-    @Test
-    void updateTraineeTrainers_Success() {
-        when(authService.authenticateTrainee("trainee1", "password123")).thenReturn(true);
-        when(traineeRepository.findByUsername("trainee1")).thenReturn(Optional.of(trainee));
-        when(trainerRepository.findByUsernameIn(List.of("trainer1"))).thenReturn(List.of(trainer));
-
-        List<TrainerResponseDto> response = trainingService.updateTraineeTrainers("trainee1", "password123", List.of("trainer1"));
-
-        assertEquals(1, response.size());
-        assertEquals("trainer1", response.get(0).getUsername());
-        verify(traineeRepository, times(1)).save(trainee);
-    }
-
-    @Test
-    void updateTraineeTrainers_Fail_TraineeNotFound() {
-        when(authService.authenticateTrainee("trainee1", "password123")).thenReturn(true);
-        when(traineeRepository.findByUsername("trainee1")).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(IllegalArgumentException.class, () ->
-                trainingService.updateTraineeTrainers("trainee1", "password123", List.of("trainer1")));
-
-        assertEquals("Trainee not found with username: trainee1", exception.getMessage());
+        assertThrows(EmptyTrainerListException.class, () -> trainingService.updateTraineeTrainersList(null));
+        assertThrows(EmptyTrainerListException.class, () -> trainingService.updateTraineeTrainersList(Collections.emptyList()));
     }
 }
